# koscom.riskrank

./: .gitignore  List.ipynb  README.md  RESULT_TYPE_10_채권형.csv  RESULT_TYPE_11_MMF.csv  RESULT_TYPE_20_주식형.csv  RESULT_TYPE_21_주식혼합형.csv  RESULT_TYPE_22_채권혼합형.csv  RESULT_TYPE_23_절대수익추구형.csv  RESULT_TYPE_24_부동산형.csv  RESULT_TYPE_29_기타.csv  RESULT_TYPE_50_해외채권형.csv  RESULT_TYPE_60_해외주식형.csv  RESULT_TYPE_61_해외주식혼합형.csv  RESULT_TYPE_62_해외채권혼합형.csv  RESULT_TYPE_64_해외부동산형.csv  RESULT_TYPE_65_커머더티형.csv  RESULT_TYPE_69_해외기타.csv  STATISTICS_TYPE_10_채권형.csv  STATISTICS_TYPE_11_MMF.csv  STATISTICS_TYPE_20_주식형.csv  STATISTICS_TYPE_21_주식혼합형.csv  STATISTICS_TYPE_22_채권혼합형.csv  STATISTICS_TYPE_23_절대수익추구형.csv  STATISTICS_TYPE_24_부동산형.csv  STATISTICS_TYPE_29_기타.csv  STATISTICS_TYPE_50_해외채권형.csv  STATISTICS_TYPE_60_해외주식형.csv  STATISTICS_TYPE_61_해외주식혼합형.csv  STATISTICS_TYPE_62_해외채권혼합형.csv  STATISTICS_TYPE_64_해외부동산형.csv  STATISTICS_TYPE_65_커머더티형.csv  STATISTICS_TYPE_69_해외기타.csv  TYPE_10.ipynb  TYPE_11.ipynb  TYPE_20.ipynb  TYPE_21.ipynb  TYPE_22.ipynb  TYPE_23.ipynb  TYPE_24.ipynb  (+12 more)
logs_case0/: TYPE_11_MMF.ipynb  TYPE_22_채권혼합형.ipynb  TYPE_24_부동산형.ipynb  TYPE_29_기타.ipynb  TYPE_50_해외채권형.ipynb  TYPE_60_해외주식형.ipynb  TYPE_61_해외주식혼합형.ipynb  TYPE_62_해외채권혼합형.ipynb  TYPE_64_해외부동산형.ipynb  TYPE_69_해외기타.ipynb
logs_case1/: TYPE_10_채권형.ipynb  TYPE_11_MMF.ipynb  TYPE_20_주식형.ipynb  TYPE_24_부동산형.ipynb  TYPE_29_기타.ipynb  TYPE_50_해외채권형.ipynb  TYPE_60_해외주식형.ipynb  TYPE_61_해외주식혼합형.ipynb  TYPE_62_해외채권혼합형.ipynb  TYPE_64_해외부동산형.ipynb  TYPE_69_해외기타.ipynb
logs_case2/: TYPE_11_MMF.ipynb  TYPE_20_주식형.ipynb  (+8 more)
(+347 files in other folders)
