[tool.poetry]
name = "koscom-riskrank"
version = "0.1.0"
description = ""
authors = ["이찬희 <lunalcni@gmail.com>"]
readme = "README.md"
packages = [{include = "koscom"}]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
